[gd_scene load_steps=5 format=3 uid="uid://cwjp7q1w18u4p"]

[ext_resource type="Script" uid="uid://dai8r8wn5redq" path="res://Scripts/fleet_sparation_scene.gd" id="1_mh7sl"]
[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="1_mxuxe"]
[ext_resource type="PackedScene" uid="uid://dci144io03ffa" path="res://Scenes/CaptainButton.tscn" id="2_mxuxe"]
[ext_resource type="Script" uid="uid://bcrnrsyr12m2a" path="res://Scripts/UI/InputScroll.gd" id="4_wglh3"]

[node name="FleetSeparationScene" type="PanelContainer" node_paths=PackedStringArray("CurrentFleetRangeText", "CurrentFleetFuelBar", "CurrentFleetCommanderPlecemenet", "CurrentFleetShipPlecement", "NewFleetRangeText", "NewFleetFuelBar", "NewFleetShipPlecement", "NewFleetCommanderPlecemenet") groups=["FleetSep"]]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = ExtResource("1_mxuxe")
script = ExtResource("1_mh7sl")
CurrentFleetRangeText = NodePath("VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer/CurrentFleetRange")
CurrentFleetFuelBar = NodePath("VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/CurrentFleetFuel")
CurrentFleetCommanderPlecemenet = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/CurrentFleetCommanderPlecement")
CurrentFleetShipPlecement = NodePath("VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/InputScroll/VBoxContainer")
NewFleetRangeText = NodePath("VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer/NewFleetRange")
NewFleetFuelBar = NodePath("VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer/NewFleetFuel")
NewFleetShipPlecement = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer3/VBoxContainer2/InputScroll/VBoxContainer")
NewFleetCommanderPlecemenet = NodePath("VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/NewFleetCommanderPlecement")
ShipContainer = ExtResource("2_mxuxe")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_mxuxe")

[node name="CurrentFleetCommanderPlecement" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/CurrentFleetCommanderPlecement"]
layout_mode = 2
text = "Fleet Commander"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_mxuxe")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Suad Members"
horizontal_alignment = 1

[node name="InputScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_wglh3")
metadata/_custom_type_script = "uid://bcrnrsyr12m2a"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer2/VBoxContainer/InputScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_styles/panel = ExtResource("1_mxuxe")

[node name="NewFleetCommanderPlecement" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2"]
custom_minimum_size = Vector2(0, 110)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer2/NewFleetCommanderPlecement"]
layout_mode = 2
text = "Fleet Commander"
horizontal_alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_mxuxe")

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer3"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer3/VBoxContainer2"]
layout_mode = 2
text = "Squad Members"
horizontal_alignment = 1

[node name="InputScroll" type="ScrollContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer3/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("4_wglh3")
metadata/_custom_type_script = "uid://bcrnrsyr12m2a"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2/PanelContainer3/VBoxContainer2/InputScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_mxuxe")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "FUEL"

[node name="CurrentFleetFuel" type="ProgressBar" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentFleetRange" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Range : 155 km"

[node name="PanelContainer2" type="PanelContainer" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_mxuxe")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "FUEL"

[node name="NewFleetFuel" type="ProgressBar" parent="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NewFleetRange" type="Label" parent="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer"]
layout_mode = 2
text = "Range : 155 km"

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "FINISH"

[connection signal="gui_input" from="VBoxContainer/HBoxContainer2/PanelContainer/VBoxContainer/HBoxContainer/CurrentFleetFuel" to="." method="CurrentFleetBarInput"]
[connection signal="gui_input" from="VBoxContainer/HBoxContainer2/PanelContainer2/VBoxContainer/HBoxContainer/NewFleetFuel" to="." method="NewFleetBarInput"]
[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
